# Geto

./: CMakeLists.txt  Readme.md
exemples/: callback.cpp  keyboard.cpp  simpleWindow.cpp
include/geto/: keyboard.h  platform.h
src/: platform.cpp
